Update naming for pipeline components to improve readability  (#22)
Closes #16

--- a/code/frontend/pages/chat/style.css
+++ b/code/frontend/pages/chat/style.css
@@ -55,6 +55,7 @@ div.generating {
 .avatar-container {
   height: 50px !important;
   width: 50px !important;
+  align-self: flex-end;
 }
 .bubble-gap {
   gap: 0px !important;
