Front end knowledge base upload/delete functionality (#70)
This PR adds functionality for interacting with the knowledge base to
the chat frontend. This will allow users to upload PDF documents from
their computer to the knowledge base, view documents currently in the
knowledge base, and delete documents from the knowledge base.

**Files changed:**

project/spec.yaml - change start command for the chat front end to
reload when a file called "reload" is edited

code/frontend/pages/control/__init__.py - this is where the front end
changes are

code/frontend/pages/control/style.css - one style addition for the new
front end components

requirements.txt - pypdf added as it is needed for uploading a document

**Files added:**

code/frontend/_static/images/upload-button.png - Icon for the upload
file button

--- a/code/frontend/pages/control/style.css
+++ b/code/frontend/pages/control/style.css
@@ -92,3 +92,6 @@ div#config-editor label, div#config-editor button, div#config-editor .container 
 div#config-wrapper {
   border-radius: 1em 1em 0em 0em;
 }
+[data-testid="checkbox-group"] {
+  display: block;
+}
